// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

datasource db {
  provider = "mysql"
  url      = env("DATABASE_URL")
}

generator client {
  provider = "prisma-client-js"
}

model User {
  id Int @id @default(autoincrement())

  email String @unique
  name  String

  isAdmin Boolean @default(false)

  isActive Boolean @default(true) // Soft Delete

  userRatings UserRating[]
}

model Title {
  id Int @id @default(autoincrement())

  type String // TODO: use enum

  title         String @db.VarChar(500)
  originalTitle String @db.VarChar(500)
  year          Int    @db.SmallInt
  runtimeMins   Int

  posterUrl  String  @db.VarChar(500)
  trailerUrl String? @db.VarChar(500)

  genres Json // String[]

  directors Json // String[]
  writers   Json // String[]
  stars     Json // String[]

  isActive Boolean @default(true) // Soft Delete

  // Relations
  userRatings UserRating[]
  cast        Casting[]
}

model Actor {
  id Int @id @default(autoincrement())

  name       String  @db.VarChar(500)
  pictureUrl String? @db.VarChar(500)

  castings Casting[]
}

model Casting {
  id Int @id @default(autoincrement())

  titleId Int
  actorId Int

  roles Json // String[]

  title Title @relation(fields: [titleId], references: [id])
  actor Actor @relation(fields: [actorId], references: [id])
}

model UserRating {
  id Int @id @default(autoincrement())

  userId  Int
  titleId Int

  rating Int // 1-10// TODO: improve naming and constraints

  title Title @relation(fields: [titleId], references: [id])
  user  User  @relation(fields: [userId], references: [id])
}
